--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,25 @@
 <html lang="en" ng-app="app">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>数据采集</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main ng-view></main>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="app.module.js"></script>
+<script src="app.config.js"></script>
+<script src="app.route.js"></script>
+<!----------------------------------->
+<script src="dirctive/navContent.js"></script>
+<!----------------------------------->
+<script src="module/base/base.controller.js"></script>
+<script src="module/configBtn/configBtn.controller.js"></script>
+<script src="module/nav/nav.controller.js"></script>
+<script src="module/systemConfig/systemConfig.controller.js"></script>
+<script src="module/infoConfig/infoConfig.controller.js"></script>
+<script src="module/dataShow/dataShow.controller.js"></script>
 </body>
 </html>
