--- a/src/module/dataShow/dataShow.html
+++ b/src/module/dataShow/dataShow.html
@@ -1,3 +1,18 @@
-<div ng-controller="DataShow as vm">
-    2
+<div ng-controller="DataShow as vm" class="dataShowWrapper">
+    <table>
+        <thead>
+        <tr>
+            <td>日期</td>
+            <td>类型</td>
+            <td>功率/立方</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="$item in vm.data track by $index">
+            <td>{{$item.date}}</td>
+            <td>{{$item.type}}</td>
+            <td>{{$item.other}}</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
