--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>数据采集</title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 <main ng-view></main>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script><!--ui-bootstrap‌​.min.js-->
+<script src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="bower_components/angular-touch/angular-touch.min.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+<script src="bower_components/angular-ui-bootstrap/ui-bootstrap-2.1.3.js"></script>
+<script src="bower_components/angular-ui-bootstrap/ui-bootstrap-tpls-2.1.3.min.js"></script>
+<script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+
 <script src="app.module.js"></script>
 <script src="app.config.js"></script>
 <script src="app.route.js"></script>
@@ -22,5 +31,6 @@
 <script src="module/systemConfig/systemConfig.controller.js"></script>
 <script src="module/infoConfig/infoConfig.controller.js"></script>
 <script src="module/dataShow/dataShow.controller.js"></script>
+<script src="module/openModal/meter.controller.js"></script>
 </body>
 </html>
