--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
     <title>数据采集</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 <main ng-view></main>
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
-<script src="bower_components/jquery/dist/jquery.min.js"></script><!--ui-bootstrap‌​.min.js-->
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="bower_components/angular-touch/angular-touch.min.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
@@ -22,9 +21,9 @@
 <script src="app.module.js"></script>
 <script src="app.config.js"></script>
 <script src="app.route.js"></script>
-<!----------------------------------->
+
 <script src="dirctive/navContent.js"></script>
-<!----------------------------------->
+
 <script src="module/base/base.controller.js"></script>
 <script src="module/configBtn/configBtn.controller.js"></script>
 <script src="module/nav/nav.controller.js"></script>
